# kinship-companions

./: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
chat-logs/: GOAT_character_ai_data.txt  GOAT_chat_history.txt  Rosie_character_ai_data.txt  Rosie_chat_history.txt
companions/: Alex.txt  GOAT.txt  Kelly.txt  Larry.txt  companions.json
kinship-backend/: LICENSE  README.md  ReadingLevelScore.py  app.py  index.py  pyproject.toml  requirements.txt
kinship-backend/langchain-code-analysis-env/: Human.py  Snapshot.py  Snapshotter.py  app.py  kinship_conversations.txt  tweets_json.json  util.py
kinship-backend/langchain-code-analysis-env/memory/: goat.json
kinship-backend/langchain-code-analysis-env/shogoth_convos/: agent_conversation.txt
kinship-backend/memory/core/: Snapshot.py  Snapshottable.py
kinship-backend/shogoth_convos/: convos2.txt
kinship-backend/wisdom/: voices.json
src/app/: about.tsx  layout.tsx  page.tsx
src/app/sign-in/[[...sign-in]]/: page.tsx
src/app/sign-up/[[...sign-up]]/: page.tsx
src/app/utils/: memory.ts
src/components/: Navbar.tsx
src/pages/: about.tsx
