[tool.poetry]
name = "kinship-companions"
version = "0.1.0"
description = "life long friends"
authors = ["Connor Duffy <connor@kinshipcompanions.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
flask = "^2.3.3"
marvin = "^1.5.0"
pydantic = "^2.3.0"
langchain = "^0.0.300"
pinecone-client = "3.0.0rc2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
